# vehicle-plate-validator-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  high_level_requirement.txt  low_level_requirement.txt  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: python-app.yml
app/: config.py  main.py
app/db/: connection.py
application/: auth.py  examples.py  main.py
application/db/: alembic.ini  connection.py  models.py
application/db/crud/: common.py
application/db/migrations/: env.py
application/db/migrations/versions/: c9768fa6dabb_create_plates_table.py
application/routes/: users.py  vehicle_plate.py
application/schemas/: users.py  vehicle_plate.py
docker/: nginx.conf
scripts/: lint.py
tests/: test_main.py
tests/routes/: test_vehicle_plate.py
