[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["app"]

# Optional: Configuration for various tools like flake8, black, etc.

[tool.black]
line-length = 88

[tool.flake8]
max-line-length = 88

[tool.mypy]
files = "app, tests"